--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,44 @@
-streamlit==1.39.0
-pandas==2.2.3
-numpy==2.1.2
-openpyxl==3.1.5
-plotly==5.24.1
-minio==7.2.9
-bcrypt==4.2.0
-pillow==10.4.0
-pyyaml==6.0.2
-streamlit
-pandas
-numpy
-matplotlib
-reportlab
-Pillow
-sqlalchemy
-openpyxl
-xlsxwriter
-PyPDF2
-werkzeug
-passlib           # or use werkzeug.security only
-apscheduler
-plotly
-python-dotenv     # for environment config
-streamlit>=1.26.0
-pandas>=2.1.0
-numpy>=1.26.0
-matplotlib>=3.8.0
-openpyxl>=3.1.2
-reportlab>=4.0.4
-Pillow>=10.0.0
-boto3
-sqlalchemy
-minio
-streamlit
-pandas
-openpyxl
-minio
-bcrypt
+# --- Core Framework ---
+streamlit==1.50.0
+pandas==2.3.3
+numpy==2.3.3
+plotly==6.3.1
+pillow==11.3.0
+matplotlib==3.10.6
 
+# --- Excel & PDF Handling ---
+openpyxl==3.1.5
+xlsxwriter==3.2.9
+PyPDF2==3.0.1
+reportlab==4.4.4
+
+# --- Database & Utilities ---
+sqlalchemy==2.0.44
+python-dotenv==1.2.1
+passlib==1.7.4
+bcrypt==5.0.0
+apscheduler==3.11.0
+
+# --- Cloud Integrations ---
+boto3==1.40.61
+minio==7.2.18
+
+# --- Google API (Drive Integration) ---
+google-auth==2.42.0
+google-auth-oauthlib==1.2.2
+google-auth-httplib2==0.2.0
+google-api-python-client==2.185.0
+
+# --- Other Dependencies ---
+pyyaml==6.0.2
+werkzeug==3.1.3
+rich==13.9.4
+watchdog==6.0.0
+protobuf==6.32.1
+cachetools==6.2.0
+packaging==25.0
+
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
