Added Internal & External Test Reports modules with Google Drive integration

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ env/
 Thumbs.db
 
 service_account.json
+# Sensitive credentials
+service_account.json
+secrets.toml
+token.pkl
+credentials.json
+
+# Streamlit cache
+.streamlit/
+__pycache__/
